--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "echoapp",
+  "name": "csc3916_hw1",
   "version": "1.0.0",
-  "description": "Echo App",
+  "description": "Simple echo server with express",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "mocha --timeout 10000 --exit"
   },
   "repository": {
@@ -12,6 +13,9 @@
   },
   "author": "Shawn McCarthy",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.21.2"
+  },
   "bugs": {
     "url": "https://github.com/shawnmccarthy/week3/issues"
   },
@@ -19,7 +23,7 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "chai-http": "^4.4.0",
-    "mocha": "^11.0.1",
+    "mocha": "^11.1.0",
     "sinon": "^19.0.2"
   }
 }
